<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainMenu"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <Button
        android:id="@+id/information_text1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/purple_button"
        android:text="@string/information_text1"
        android:textColor="@color/white"
        android:width="270dp" />

    <Button
        android:id="@+id/information_text2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/purple_button"
        android:singleLine="false"
        android:text="@string/information_text3"
        android:textColor="@color/white"
        android:width="270dp" />

    <Button
        android:id="@+id/information_text3"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/purple_button"
        android:enabled="true"
        android:text="@string/information_text5"
        android:textColor="@color/white"
        android:width="270dp" />

</LinearLayout>